--- a/src/components/organisms/FileManager/FileManager.css
+++ b/src/components/organisms/FileManager/FileManager.css
@@ -21,6 +21,9 @@
 .FileRow--Selected {
   background-color: #ececec; }
 
+.FileRow__Checkbox {
+  width: 2.4rem; }
+
 .FileRow__Path div {
   display: flex;
   justify-content: space-between; }
@@ -43,19 +46,6 @@
     cursor: pointer;
     font-size: 1.8rem;
     padding: 0.4rem 0.8rem;
-    transition: background-color 0.2s ease-in-out; }
+    transition: background-color 0.3s ease-in-out; }
     .TableActions__DownloadButton button:hover {
-      background-color: #ccc; }
-
-.Panel {
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15); }
-  .Panel__Header {
-    padding: 1.2rem 0.8rem; }
-
-.StatusIndicator {
-  border-radius: 50%;
-  display: inline-block;
-  height: 1.6rem;
-  width: 1.6rem; }
-  .StatusIndicator--available {
-    background-color: #74D245; }
+      background-color: #efefef; }
